# chat-app

./: .gitignore
Frontend/: index.html  package-lock.json  package.json  vercel.json
Frontend/src/: App.tsx  index.css
Frontend/src/hooks/: useAuth.ts
Frontend/src/pages/: Chat.tsx  Home.tsx
Frontend/src/services/: auth.ts  getMessageReadByUsers.ts  getUserStatus.ts  getUsers.ts  markMessageRead.ts  recentChatItems.ts  recentMessages.ts  useWebSocket.ts  websocket.ts
Frontend/src/types/: chat-item.ts  chatItem.ts  conversation.ts  friendship.ts  login.ts  loginRequest.ts  loginResponse.ts  message-read.ts  message.ts  messageRead.ts  registerRequest.ts  user.ts  (+1 more)
api/: Cargo.toml  docker-compose.yml  useful_commands.txt
api/migrations/: 20260324050604_create_users_table.sql  20260324050605_create_messages_table.sql  20260324050606_create_message_reads_table.sql  20260324050607_create_friendships.sql  20260324050608_create_conversations.sql  20260324050609_create_conversation_members.sql
api/src/: application.rs  db.rs  main.rs  routes.rs
api/src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs  types.rs
api/src/dtos/: conversation.rs  friendship.rs  login.rs  message.rs  message_read.rs  mod.rs  register.rs  user.rs  ws.rs
api/src/handlers/: auth.rs  conversation.rs  friendship.rs  me.rs  message.rs  message_read.rs  mod.rs  user.rs  ws.rs
api/src/mappers/: conversation.rs  friendship.rs  message.rs  message_read.rs  mod.rs  user.rs
api/src/models/: conversation.rs  friendship.rs  message.rs  message_read.rs  user.rs
scripts/: seed.sql
(+18 files in other folders)
