[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
tokio = { version = "1.42", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "macros", "uuid"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

futures-util = "0.3"

jsonwebtoken = "9"
argon2 = "0.5"
rand_core = "0.6"

dotenvy = "0.15"

uuid = { version = "1", features = ["v4", "serde"] }

tracing = "0.1"
tracing-subscriber = "0.3"
